tests/rustdoc-ui/intra-doc/non-path-primitives.stderr
error: unresolved link to `T`
  --> $DIR/non-path-primitives.rs:12:7
   |
LL | //! [[T]::rotate_left]
   |       ^ no item named `T` in scope
   |
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`
note: the lint level is defined here
  --> $DIR/non-path-primitives.rs:1:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unresolved link to `Z`
  --> $DIR/non-path-primitives.rs:14:5
   |
LL | //![Z]([T; N]::map)
   |     ^ no item named `Z` in scope
   |
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`

error: unresolved link to `Z`
  --> $DIR/non-path-primitives.rs:17:6
   |
LL | //! [Z][]
   |      ^ no item named `Z` in scope
   |
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`

error: unresolved link to `Z`
  --> $DIR/non-path-primitives.rs:19:6
   |
LL | //! [Z]: [T; N]::map
   |      ^ no item named `Z` in scope
   |
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`

error: unresolved link to `unit::eq`
  --> $DIR/non-path-primitives.rs:28:6
   |
LL | //! [unit::eq]
   |      ^^^^^^^^ the primitive type `unit` has no associated item named `eq`

error: unresolved link to `tuple::eq`
  --> $DIR/non-path-primitives.rs:29:6
   |
LL | //! [tuple::eq]
   |      ^^^^^^^^^ the primitive type `tuple` has no associated item named `eq`

error: unresolved link to `fn::eq`
  --> $DIR/non-path-primitives.rs:30:6
   |
LL | //! [fn::eq]
   |      ^^^^^^ the primitive type `fn` has no associated item named `eq`

error: unresolved link to `reference::deref`
  --> $DIR/non-path-primitives.rs:34:6
   |
LL | //! [reference::deref]
   |      ^^^^^^^^^^^^^^^^ the primitive type `reference` has no associated item named `deref`

error: aborting due to 8 previous errors

